2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* src/GNOME_MiniCommanderApplet.server: Delete from SVN
	control. It should never have been there in the first place.

	* src/preferences.c
	* src/mini-commander.ui	
	* src/Makefile.am: Convert from glade to gtk-builder. Patch from
	Jaap Haitsma (bug #521082).

2008-03-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* help/pt_BR/pt_BR.po: Updated Brazilian Portuguese translation.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* help/ko/*: 
	* help/Makefile.am: Korean manual migrated to gnome-doc-utils from
	the old Sun manual.

2007-07-30  Claude Paroz <claude@2xlibre.net>

	* command_line.c:
	* exec.c: Removed files (moved to src long ago). Fixes bug #459086.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* src/GNOME_MiniCommanderApplet.xml: Use gtk-about i.s.o. 
	gnome-stock-about. Fixes bug #456955

	* src/about.c: (about_box):
	* src/mini-commander_applet.c: (mc_applet_draw), (mc_destroyed),
	(mini_commander_applet_fill):
	* src/mini-commander_applet.h:
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-04-04  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* help/es/es.po: Updated Spanish translation by Jorge González.

2007-01-25  David Lodge <dave@cirt.net>

	* help/en_GB/en_GB.po: Added English (British) translation
	* help/Makefile.am: Added en_GB to DOC_LINGUAS

2007-01-02  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.

2006-11-16  Tom Tromey  <tromey@redhat.com>

	* GNOME_MiniCommanderApplet.server.in: Use "formerly".
	Bug #331121.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* help/C/command-line.xml: Fix build.

2006-11-02  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.

2006-07-23  Christophe Bliard  <christophe.bliard@trux.info>
