@@ -1,3 +1,8 @@
+2008-03-16  Callum McKenzie  <callum@spooky-possum.org>
+
+	* dock.c: Patch from Danny Baumann to set the window type hint to
+	assist compositing window managers (see bug #522238).
+
 2008-02-13  Jonh Wendell <jwendell@gnome.org>
 
 	* docs/Makefile.am:
