@@ -1,5 +1,8 @@
 2008-03-16  Callum McKenzie  <callum@spooky-possum.org>
 
+	* src/command_line.c: Patch from Danny Baumann to set the window
+	type hint to assist compositing window managers (see bug #522238).
+
 	* src/GNOME_MiniCommanderApplet.server: Delete from SVN
 	control. It should never have been there in the first place.
 
